@@ -8,16 +8,23 @@ import org.bukkit.World;
 import org.bukkit.entity.Entity;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class ChunksScanner {
-    public static void getChunksWithMostEntities(int totalChunksReturn, final FindOneCallback callback, World... worlds) {
+    private final NeoPerformance plugin;
+
+    public ChunksScanner(NeoPerformance plugin) {
+        this.plugin = plugin;
+    }
+
+    public void getChunksWithMostEntities(int totalChunksReturn, final FindOneCallback callback, World... worlds) {
         // Run outside the tick loop
         List<Entity> entities = new ArrayList<>();
 
         for (World world : worlds) {
             entities.addAll(world.getEntities());
         }
-        Bukkit.getScheduler().runTaskAsynchronously(NeoPerformance.getInstance(), () -> {
+        Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             //arrange entities in descending order of chunk count
             LinkedHashMap<Chunk, Integer> chunkCounts = new LinkedHashMap<>();
             for (Entity entity : entities) {
@@ -36,7 +43,7 @@ public class ChunksScanner {
                 int max = Collections.max(chunkCounts.values());
                 Chunk chunk = chunkCounts.entrySet().stream()
                         .filter(entry -> entry.getValue() == max)
-                        .map(Map.Entry::getKey).toList().get(0);
+                        .map(Map.Entry::getKey).collect(Collectors.toList()).get(0);
                 chunkCounts.remove(chunk);
                 topChunks.add(chunk);
             }
